fixes the overflow and removed inline styles

--- a/index.css
+++ b/index.css
@@ -61,3 +61,24 @@
 .card-title{
   color:pink
 }
+.book-appointment-text{
+  color:black;
+  text-decoration: none;
+}
+.book-appointment{
+  margin-top:30px;
+}
+
+.image-margin{
+  margin-top: 30px;
+}
+.third-row-font{
+  font-size: 41px;
+}
+.green-color{
+  color:green !important;
+}
+
+.button-color{
+  background-color: greenyellow !important;
+}
